--- a/election-management/pom.xml
+++ b/election-management/pom.xml
@@ -153,6 +153,23 @@
         </configuration>
       </plugin>
       <plugin>
+	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-compiler-plugin</artifactId>
+	    <version>${compiler-plugin.version}</version>
+	    <configuration>
+	        <annotationProcessorPaths>
+	            <path>
+	                <groupId>org.inferred</groupId>
+	                <artifactId>freebuilder</artifactId>
+	                <version>2.8.0</version>
+	            </path>
+	        </annotationProcessorPaths>
+	        <compilerArgs>
+	            <arg>-parameters</arg>
+	        </compilerArgs>
+	    </configuration>
+	  </plugin>
+      <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>${surefire-plugin.version}</version>
         <executions>
